--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 body{
     background-color: goldenrod;
 }
+
+img{
+    height: 100px;
+    width: 100px;
+}
+
+ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+}
+ul li{
+    padding: 3%;
+}
+
+.container{
+    width: 70%;
+    background-color: white;
+    margin: auto;
+}
